# ink-voting-dApp

./: README.md
voter_registry/: Cargo.toml  lib.rs
voting/: Cargo.toml  lib.rs
