[package]
name = "voter_registry"
version = "0.1.0"
authors = ["Goitseone Themba <goitseonerozthemba@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "5.1.1", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale-info/std",
    "ink_e2e/std",
]
ink-as-dependency = []
e2e-tests = []
